# easy-roman-nums

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
easy_roman_nums/: __init__.py  core.py
tests/: test_easy_roman_nums.py
